--- a/api/app-venv/pyvenv.cfg
+++ b/api/app-venv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Titouan\AppData\Local\Programs\Python\Python312
+home = C:\Users\foras\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.0
-executable = C:\Users\Titouan\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Titouan\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\Titouan\Documents\GitHub\fastapi-api-pokemon\api\app-venv
+executable = C:\Users\foras\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\foras\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\foras\Documents\GitHub\Borloo\fastapi-api-pokemon\api\app-venv
