changements dernière minutes

--- a/api/app-venv/pyvenv.cfg
+++ b/api/app-venv/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\foras\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.0
 executable = C:\Users\foras\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\foras\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\foras\Documents\GitHub\Borloo\fastapi-api-pokemon\api\app-venv
+command = C:\Users\foras\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\foras\Documents\GitHub\fastapi-api-pokemon\api\app-venv
